--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
 <html>
 	<head>
 		<title>{{ page.title }}</title>
+		<link href='/css/master.css' rel='stylesheet' type='text/css'>
+		<link href='//fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
