--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 	<head>
 		<title>{{ page.title }}</title>
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<script src="//code.jquery.com/jquery-2.1.0.min.js"></script>
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
@@ -12,6 +15,7 @@
 
 	<body>
 		<header></header>
+		<div class="container-fluid"></div>
 		{{ content }}
 	</body>
 </html>
