--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,15 @@
 	</head>
 
 	<body>
-		<header></header>
-		<div class="container-fluid"></div>
-		{{ content }}
+		<div class="container">
+			<div class="header">
+				<h3 class="text-muted">bishop.github.io</h3>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					{{ content }}
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
