--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
-	<head>
-		<title>{{ page.title }}</title>
-
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-
-		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
-		<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-		<link href='//fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-		<link href='/css/master.css' rel='stylesheet' type='text/css'>
-	</head>
+  {% include head.html %}
 
 	<body>
 		<div class="container">
@@ -24,5 +14,6 @@
 				</div>
 			</div>
 		</div>
+		{% include footer.html %}
 	</body>
 </html>
